--- a/movie/site/page3.html
+++ b/movie/site/page3.html
@@ -51,7 +51,7 @@
       <span class="types">類型: 剧情, 爱情</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 韩国</span>
       <span>片長: 118</span>
       <span>上映: 2011-02-17</span>
     </div>
@@ -83,7 +83,7 @@
       <span class="types">類型: 剧情, 喜剧, 家庭</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 韩国</span>
       <span>片長: 127</span>
       <span>上映: 2013-01-23</span>
     </div>
@@ -99,7 +99,7 @@
       <span class="types">類型: 剧情, 家庭</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 韩国</span>
       <span>片長: 80</span>
       <span>上映: 2002-04-05</span>
     </div>
@@ -115,7 +115,7 @@
       <span class="types">類型: 动画, 冒险, 奇幻, 家庭</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 日本</span>
       <span>片長: 86</span>
       <span>上映: 2018-12-14</span>
     </div>
@@ -131,7 +131,7 @@
       <span class="types">類型: 剧情, 动作, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 日本</span>
       <span>片長: 207</span>
       <span>上映: 1954-04-26</span>
     </div>
@@ -163,7 +163,7 @@
       <span class="types">類型: 剧情, 犯罪</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 138</span>
       <span>上映: 1993-11-24</span>
     </div>
