--- a/movie/site/page6.html
+++ b/movie/site/page6.html
@@ -83,7 +83,7 @@
       <span class="types">類型: 喜剧, 动画, 奇幻, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 101</span>
       <span>上映: 2012-11-06</span>
     </div>
@@ -147,7 +147,7 @@
       <span class="types">類型: 剧情, 喜剧, 爱情</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 90</span>
       <span>上映: 2010-07-26</span>
     </div>
@@ -163,7 +163,7 @@
       <span class="types">類型: 喜剧, 动画, 奇幻, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 98</span>
       <span>上映: 2010-05-14</span>
     </div>
