--- a/movie/site/page7.html
+++ b/movie/site/page7.html
@@ -19,7 +19,7 @@
       <span class="types">類型: 剧情, 喜剧, 动画, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 96</span>
       <span>上映: 2009-08-04</span>
     </div>
@@ -51,7 +51,7 @@
       <span class="types">類型: 动作, 犯罪</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 130</span>
       <span>上映: 2011-05-12</span>
     </div>
@@ -67,7 +67,7 @@
       <span class="types">類型: 剧情, 动作, 传记, 历史, 战争</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 177</span>
       <span>上映: 1995-05-18</span>
     </div>
@@ -83,7 +83,7 @@
       <span class="types">類型: 剧情, 喜剧, 爱情, 歌舞</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 印度</span>
       <span>片長: 171</span>
       <span>上映: 2011-12-08</span>
     </div>
@@ -99,7 +99,7 @@
       <span class="types">類型: 剧情</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 157</span>
       <span>上映: 1992-12-23</span>
     </div>
@@ -131,7 +131,7 @@
       <span class="types">類型: 动画, 奇幻, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 日本</span>
       <span>片長: 117</span>
       <span>上映: </span>
     </div>
