--- a/movie/site/page1.html
+++ b/movie/site/page1.html
@@ -35,7 +35,7 @@
       <span class="types">類型: 剧情, 动作, 犯罪</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 法国</span>
       <span>片長: 110</span>
       <span>上映: 1994-09-14</span>
     </div>
@@ -51,7 +51,7 @@
       <span class="types">類型: 剧情, 犯罪</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 142</span>
       <span>上映: 1994-09-10</span>
     </div>
@@ -67,7 +67,7 @@
       <span class="types">類型: 剧情, 爱情, 灾难</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 194</span>
       <span>上映: 1998-04-03</span>
     </div>
@@ -83,7 +83,7 @@
       <span class="types">類型: 剧情, 喜剧, 爱情</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 118</span>
       <span>上映: 1953-08-20</span>
     </div>
@@ -115,7 +115,7 @@
       <span class="types">類型: 剧情, 爱情, 历史, 战争</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 238</span>
       <span>上映: 1939-12-15</span>
     </div>
@@ -147,7 +147,7 @@
       <span class="types">類型: 剧情, 科幻</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 103</span>
       <span>上映: </span>
     </div>
@@ -163,7 +163,7 @@
       <span class="types">類型: 动画, 歌舞, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 89</span>
       <span>上映: 1995-07-15</span>
     </div>
