--- a/movie/site/page10.html
+++ b/movie/site/page10.html
@@ -67,7 +67,7 @@
       <span class="types">類型: 剧情, 爱情, 奇幻</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 105</span>
       <span>上映: 1990-12-06</span>
     </div>
@@ -115,7 +115,7 @@
       <span class="types">類型: 动画, 奇幻, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 日本</span>
       <span>片長: 125</span>
       <span>上映: 1992-05-01</span>
     </div>
@@ -131,7 +131,7 @@
       <span class="types">類型: 剧情, 爱情, 歌舞, 传记</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 174</span>
       <span>上映: 1965-03-02</span>
     </div>
@@ -147,7 +147,7 @@
       <span class="types">類型: 剧情, 历史, 战争</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 195</span>
       <span>上映: 1993-11-30</span>
     </div>
@@ -163,7 +163,7 @@
       <span class="types">類型: 剧情, 爱情, 战争</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 108</span>
       <span>上映: 1940-05-17</span>
     </div>
