--- a/movie/site/page2.html
+++ b/movie/site/page2.html
@@ -51,7 +51,7 @@
       <span class="types">類型: 剧情, 传记</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 135</span>
       <span>上映: 2001-12-13</span>
     </div>
@@ -67,7 +67,7 @@
       <span class="types">類型: 喜剧, 爱情</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 泰国</span>
       <span>片長: 118</span>
       <span>上映: 2012-06-05</span>
     </div>
@@ -83,7 +83,7 @@
       <span class="types">類型: 动画, 奇幻, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 日本</span>
       <span>片長: 94</span>
       <span>上映: 2010-07-17</span>
     </div>
@@ -115,7 +115,7 @@
       <span class="types">類型: 战争, 剧情, 爱情</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 意大利</span>
       <span>片長: 116</span>
       <span>上映: 2020-01-03</span>
     </div>
@@ -131,7 +131,7 @@
       <span class="types">類型: 剧情, 爱情, 音乐</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 意大利</span>
       <span>片長: 126</span>
       <span>上映: 2019-11-15</span>
     </div>
@@ -147,7 +147,7 @@
       <span class="types">類型: 动画, 冒险, 奇幻, 家庭</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 日本</span>
       <span>片長: 125</span>
       <span>上映: 2019-06-21</span>
     </div>
