--- a/movie/site/page4.html
+++ b/movie/site/page4.html
@@ -35,7 +35,7 @@
       <span class="types">類型: 剧情</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 韩国</span>
       <span>片長: 127</span>
       <span>上映: 2013-12-18</span>
     </div>
@@ -51,7 +51,7 @@
       <span class="types">類型: 剧情</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 日本</span>
       <span>片長: 107</span>
       <span>上映: 1987-08-01</span>
     </div>
@@ -67,7 +67,7 @@
       <span class="types">類型: 纪录片</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 92</span>
       <span>上映: 2009-07-31</span>
     </div>
@@ -99,7 +99,7 @@
       <span class="types">類型: 剧情, 悬疑, 犯罪</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 韩国</span>
       <span>片長: 97</span>
       <span>上映: 2013-07-31</span>
     </div>
@@ -115,7 +115,7 @@
       <span class="types">類型: 剧情, 悬疑</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 德国</span>
       <span>片長: 137</span>
       <span>上映: 2006-03-23</span>
     </div>
@@ -131,7 +131,7 @@
       <span class="types">類型: 喜剧, 爱情, 奇幻</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 英国</span>
       <span>片長: 123</span>
       <span>上映: 2013-09-04</span>
     </div>
@@ -163,7 +163,7 @@
       <span class="types">類型: 剧情, 犯罪</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 175</span>
       <span>上映: 2015-04-18</span>
     </div>
