--- a/movie/site/page8.html
+++ b/movie/site/page8.html
@@ -19,7 +19,7 @@
       <span class="types">類型: 剧情, 家庭, 传记</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 117</span>
       <span>上映: 2008-01-17</span>
     </div>
@@ -35,7 +35,7 @@
       <span class="types">類型: 动画, 奇幻, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 日本</span>
       <span>片長: 134</span>
       <span>上映: 1998-05-01</span>
     </div>
@@ -51,7 +51,7 @@
       <span class="types">類型: 剧情</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 96</span>
       <span>上映: 1957-04-13</span>
     </div>
@@ -83,7 +83,7 @@
       <span class="types">類型: 喜剧, 动画, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 98</span>
       <span>上映: 2013-04-20</span>
     </div>
@@ -115,7 +115,7 @@
       <span class="types">類型: 动画, 奇幻, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 日本</span>
       <span>片長: 119</span>
       <span>上映: 2004-09-05</span>
     </div>
@@ -163,7 +163,7 @@
       <span class="types">類型: 剧情, 历史, 战争</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 169</span>
       <span>上映: 1998-11-13</span>
     </div>
