--- a/movie/site/page9.html
+++ b/movie/site/page9.html
@@ -35,7 +35,7 @@
       <span class="types">類型: 喜剧, 科幻, 动画</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 98</span>
       <span>上映: 2008-06-27</span>
     </div>
@@ -147,7 +147,7 @@
       <span class="types">類型: 剧情, 犯罪</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 202</span>
       <span>上映: 1974-12-12</span>
     </div>
@@ -163,7 +163,7 @@
       <span class="types">類型: 动作, 奇幻, 冒险</span>
     </div>
     <div class="subinfo">
-      <span>發行地區: </span>
+      <span>發行地區: 美国</span>
       <span>片長: 143</span>
       <span>上映: 2003-11-21</span>
     </div>
